--- a/landing/index.html
+++ b/landing/index.html
@@ -10,7 +10,11 @@
       content="Sophikon is an AI-powered project management platform with scheduling, resource management, team collaboration, and intelligent insights — built in Europe."
     />
     <link rel="canonical" href="https://sophikon.eu/" />
-    <link rel="icon" href="/favicon.ico" sizes="any" />
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png" />
+    <link rel="manifest" href="assets/site.webmanifest" />
+    <link rel="icon" href="assets/favicon.ico" sizes="any" />
     <meta
       property="og:title"
       content="Sophikon — Intelligent Project Management"
@@ -22,7 +26,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:url" content="https://sophikon.eu/" />
-    <meta property="og:image" content="https://sophikon.eu/og-image.png" />
+    <meta property="og:image" content="https://sophikon.eu/assets/og-image.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta name="twitter:card" content="summary_large_image" />
@@ -34,7 +38,7 @@
       name="twitter:description"
       content="Scheduling, resources, collaboration, and AI — one platform for teams that deliver."
     />
-    <meta name="twitter:image" content="https://sophikon.eu/og-image.png" />
+    <meta name="twitter:image" content="https://sophikon.eu/assets/og-image.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
