chore: rename domain from sophikon.eu to sophikon.org
Modified:
- .github/workflows/ci.yml: update app URL placeholder
- backend/app/core/config.py: update CORS origins
- docker-compose.yml: update MAIL_FROM
- frontend/.env.example: update production API URL comment
- landing/index.html: update canonical URL and links
- nginx/nginx.conf: update server_name
- nginx/nginx.ssl.conf: update server_name and SSL cert paths
- docs/02-design/landing-page-mockup.html: update URLs
- docs/03-implementation/action-items.md: update URLs

--- a/landing/index.html
+++ b/landing/index.html
@@ -8,7 +8,7 @@
   <meta name="robots" content="index, follow" />
   <meta name="description"
     content="Sophikon is an AI-powered project management platform with scheduling, resource management, team collaboration, and intelligent insights — built in Europe." />
-  <link rel="canonical" href="https://sophikon.eu/" />
+  <link rel="canonical" href="https://sophikon.org/" />
   <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png" />
   <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png" />
@@ -19,15 +19,15 @@
     content="Scheduling, resources, collaboration, and AI — one platform for teams that deliver." />
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="en_US" />
-  <meta property="og:url" content="https://sophikon.eu/" />
-  <meta property="og:image" content="https://sophikon.eu/assets/og-image.png" />
+  <meta property="og:url" content="https://sophikon.org/" />
+  <meta property="og:image" content="https://sophikon.org/assets/og-image.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Sophikon — Intelligent Project Management" />
   <meta name="twitter:description"
     content="Scheduling, resources, collaboration, and AI — one platform for teams that deliver." />
-  <meta name="twitter:image" content="https://sophikon.eu/assets/og-image.png" />
+  <meta name="twitter:image" content="https://sophikon.org/assets/og-image.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
