feat(infra): add backend deploy, Discord notifications, and mobile nav fix
Modified:
- .github/workflows/ci.yml: add deploy-backend job (SSH to EC2), add Discord
  deploy notifications to all 3 deploy jobs (backend, frontend, landing)
- landing/index.html: hide nav login/CTA buttons on mobile (they're in the
  hamburger menu), fix cramped mobile header layout

--- a/landing/index.html
+++ b/landing/index.html
@@ -1404,6 +1404,10 @@
         display: flex;
       }
 
+      .nav-actions {
+        display: none;
+      }
+
       .hero {
         padding: 5rem 1.25rem 2rem;
       }
@@ -1555,7 +1559,7 @@
         <span aria-hidden="true"></span>
         <span aria-hidden="true"></span>
       </button>
-      <div>
+      <div class="nav-actions">
         <a href="/login" class="nav-login" data-app-link="/login">Log In</a>
         <a href="/register" class="nav-cta" data-app-link="/register">Get Started</a>
       </div>
